// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kiwi-shell-breadcrumb renders initialBreadcrumb 1`] = `
<kiwi-shell-breadcrumb>
  <kiwi-breadcrumb>
    <kiwi-breadcrumb-item>
      <kiwi-shell-link routekey="deep"></kiwi-shell-link>
    </kiwi-breadcrumb-item>
    <kiwi-breadcrumb-item>
      <kiwi-shell-link routekey="down"></kiwi-shell-link>
    </kiwi-breadcrumb-item>
  </kiwi-breadcrumb>
</kiwi-shell-breadcrumb>
`;

exports[`kiwi-shell-breadcrumb renders updated breadcrumb 1`] = `
<kiwi-shell-breadcrumb>
  <kiwi-breadcrumb>
    <kiwi-breadcrumb-item>
      <kiwi-shell-link routekey="deep"></kiwi-shell-link>
    </kiwi-breadcrumb-item>
    <kiwi-breadcrumb-item>
      <kiwi-shell-link routekey="down"></kiwi-shell-link>
    </kiwi-breadcrumb-item>
    <kiwi-breadcrumb-item>
      <kiwi-shell-link labelonly="" routekey="rabbit-hole">
        <span slot="kiwi-shell-link-content">
          The Rabbit Hole
        </span>
      </kiwi-shell-link>
    </kiwi-breadcrumb-item>
  </kiwi-breadcrumb>
</kiwi-shell-breadcrumb>
`;
